<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.domain.Asteroid" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <ImageView
            android:id="@+id/activity_main_image_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/asteroid_image_header"
            app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/asteroid_safe" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/close_approach_data_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/close_approach_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@{asteroid.closeApproachDate}"
                        android:textColor="@color/default_text_color"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/absolute_magnitude_title"
                            android:textColor="@color/default_text_color" />

                        <TextView
                            android:id="@+id/absolute_magnitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/default_text_color"
                            app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/help_button"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_help_circle" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/estimated_diameter_title"
                    android:textColor="@color/default_text_color" />

                <TextView
                    android:id="@+id/estimated_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    app:kmUnitText="@{asteroid.estimatedDiameter}"
                    tools:text="0.82 km" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/relative_velocity_title"
                    android:textColor="@color/default_text_color" />

                <TextView
                    android:id="@+id/relative_velocity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    app:velocityText="@{asteroid.relativeVelocity}"
                    tools:text="11.9 km/s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/distance_from_earth_title"
                    android:textColor="@color/default_text_color" />

                <TextView
                    android:id="@+id/distance_from_earth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/default_text_color"
                    app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                    tools:text="0.0924 au" />

            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_detail_image_guideline_horizontal_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_detail_image_guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_detail_image_guideline_vertical_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1.2" />

        <ImageView
            android:id="@+id/fragment_detail_image_view_rocket"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:alpha="0.5"
            android:contentDescription="@string/illustrative_image_of_the_space_station"
            android:src="@drawable/rocket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragment_detail_image_planet"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:alpha="0.5"
            android:contentDescription="@string/illustrative_earth_planet_image"
            android:src="@drawable/earth"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_image_guideline_horizontal_extra"
            app:layout_constraintEnd_toEndOf="@+id/fragment_detail_image_guideline_vertical_extra"
            app:layout_constraintStart_toStartOf="@+id/fragment_detail_image_guideline_vertical" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>