<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.asteroidradar.main.viewModel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <FrameLayout
            android:id="@+id/activity_main_image_of_the_day_layout"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/activity_main_image_of_the_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_of_the_day_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/placeholder_picture_of_day" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#55010613"
                android:padding="16dp"
                android:text="@string/image_of_the_day"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_main_image_guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_main_image_guideline_horizontal_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_main_image_guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/activity_main_image_guideline_vertical_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1.2" />

        <ImageView
            android:id="@+id/activity_main_image_view_rocket"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:alpha="0.5"
            android:contentDescription="@string/illustrative_image_of_the_space_station"
            android:src="@drawable/rocket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/activity_main_image_planet"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:alpha="0.5"
            android:contentDescription="@string/illustrative_earth_planet_image"
            android:src="@drawable/earth"
            app:layout_constraintBottom_toBottomOf="@+id/activity_main_image_guideline_horizontal_extra"
            app:layout_constraintEnd_toEndOf="@+id/activity_main_image_guideline_vertical_extra"
            app:layout_constraintStart_toStartOf="@+id/activity_main_image_guideline_vertical" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/asteroid_recycler"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day_layout"
            tools:listitem="@layout/item_asteroid" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
